--- a/stylesheet.css
+++ b/stylesheet.css
@@ -111,3 +111,33 @@
     background-color: rgba(255, 127, 80, 0.466);
     color: white;
 }
+#input {
+    position: absolute;
+    left: 1080px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 30px;
+    top: 165px;
+    width: 160px;
+    border: 2px solid white;
+    background-color: whitesmoke;
+    color: teal;
+
+}
+#submitbutton {
+    position: absolute;
+    left: 1080px;
+    top:210px;
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    border: 2px solid white;
+    background-color: coral;
+}
+
+#formtext2 {
+    position: absolute;
+    top: 130px;
+    left: 1080px;
+    font-size: 15px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
